--- a/admin/requirements2.tex
+++ b/admin/requirements2.tex
@@ -995,11 +995,11 @@ source'' should be accommodated.}
 regular expression type filtering (wild cards) on a range of header
 values. }
 
-\subrequirment{Select on source name}{Done1}{1}
+\subrequirement{Select on source name}{Done1}{1}
 {The use should be able to select dana on source name, e.g G309$*$ or
 G309$*$w}
 
-\subrequirment{Select on molecule}{Done1}{2}
+\subxrequirement{Select on molecule}{Done1}{2}
 {The use should be able to select data on molecule name, e.g. NH3$*$.}
 
 \subsection{Plugins}
