--- a/admin/requirements2.tex
+++ b/admin/requirements2.tex
@@ -999,7 +999,7 @@ values. }
 {The use should be able to select dana on source name, e.g G309$*$ or
 G309$*$w}
 
-\subxrequirement{Select on molecule}{Done1}{2}
+\subrequirement{Select on molecule}{Done1}{2}
 {The use should be able to select data on molecule name, e.g. NH3$*$.}
 
 \subsection{Plugins}
@@ -1196,7 +1196,7 @@ present in the RPFITs file. It must be possible to add the same header
 data to multiple scans simultaneously.}
 
 \extendedrequirement{Itemised header items}{Started}{1}
-{The following  header data would be required per scan:
+{The following header data would be required per scan:
 \begin{itemize}
   \item Source name
   \item Scan type (signal or reference)
