--- a/admin/reqtable.tex
+++ b/admin/reqtable.tex
@@ -3,7 +3,7 @@
 \usepackage{longtable}
 
 % Adjust the page size
-\addtolength{\oddsidemargin}{-1.2in}
+\addtolength{\oddsidemargin}{-0.4in}
 \addtolength{\evensidemargin}{+0.4in}
 \addtolength{\textwidth}{+0.8in}
 
@@ -13,14 +13,10 @@
 
 \begin{document}
 
-\renewcommand{\baselinestretch}{1.5}
-\LARGE
-
 \begin{longtable}{|l|l|l|c|}
-%\begin{longtable}{|l|l|c|}
 
-%\hline
-%\bf Requirement & & \bf Status & \bf Priortity\\
+\hline
+\bf Requirement & & \bf Status & \bf Priority\\
 \hline
 \endhead
 \hline
