Use effort field

--- a/admin/reqtable.tex
+++ b/admin/reqtable.tex
@@ -13,10 +13,10 @@
 
 \begin{document}
 
-\begin{longtable}{|l|l|l|c|}
+\begin{longtable}{|l|l|l|c|l|}
 
 \hline
-\bf Requirement & & \bf Status & \bf Priority\\
+\bf Requirement & & \bf Status & \bf Priority & \bf Effort \\
 \hline
 \endhead
 \hline
