--- a/admin/requirements2.tex
+++ b/admin/requirements2.tex
@@ -983,7 +983,7 @@ etc.}
 {An easy-to-use mechanism to select individual IFs, beams or
 polarisations is needed.}
 
-\requirement{Interactive channel selection}{Duplicate}{1}{}{}{}
+\requirement{Interactive channel selection}{Started}{1}{}{}{}
 {\label{ref:chansel} The range of spectral points to use for baseline
 removal, statistical calculations, RFI editing, analysis etc must be
 easily set by the user from both the CLI and GUI. From the CLI there
@@ -1343,8 +1343,14 @@ Johnston}
 
 \section{Requirements Matrix}
 
-\begin{longtable}{|l|l|l|c|}
+\begin{longtable}{|l|l|l|c|l|}
 
+\hline
+\bf Requirement & & \bf Status & \bf Priority & \bf Effort \\
+\hline
+\endhead
+\hline
+\endfoot
 \input{reqsum.tex}
 
 \end{longtable}
